# OrtInference

./: .gitignore  CMakeLists.txt  README.md  dependency-pkg.cmake  dependency.cmake  dependency_msvc.cmake
inc/: detector.hpp  main.hpp  utils.hpp
src/: Helpers.cpp  OnnxRuntimeResNet.cpp  detector.cpp  main-image.cpp  main-video.cpp  main.cpp  utils.cpp
